// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers discPlayer should handle DISC_START_SPIN 1`] = `
Object {
  "isDiscSpinning": true,
}
`;

exports[`reducers discPlayer should handle DISC_STOP_SPIN 1`] = `
Object {
  "isDiscSpinning": false,
}
`;

exports[`reducers discPlayer should handle ROD_OFF 1`] = `
Object {
  "isRodOn": false,
}
`;

exports[`reducers discPlayer should handle ROD_ON 1`] = `
Object {
  "isRodOn": true,
}
`;

exports[`reducers discPlayer should handle initial state 1`] = `
Object {
  "isDiscSpinning": false,
  "isRodOn": false,
}
`;

exports[`reducers discPlayer should handle unknown action type 1`] = `
Object {
  "isDiscSpinning": false,
  "isRodOn": false,
}
`;
